# weatherflow-collector

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
src/: config.py  weatherflow-collector.py
src/storage/: influxdb.py  influxdb_delete.py
testing/: __init__.py  df_utils.py  influx-tester.ipynb
