[project]
name = "weatherflow-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "aiohttp==3.9.5",
    "influxdb_client==1.44.0",
    "mysql-connector-python==8.4.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pytz==2024.1",
    "websockets==12.0"
]

[dependency-groups]
dev = [
        "colorama"
    ]
